--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
         <button class="search-btn">Search</button>
       </form>
       <ul class="gallery"></ul>
-      <div class="js-loading"></div>
-      <button class="js-more" hidden>Load more</button>
+      <div class="js-loading conteiner"></div>
+      <button class="js-more search-btn search-btn-hidden">Load more</button>
     </section>
 
     <script type="module" src="./main.js"></script>
